Add outbox recipe and fix generics in commandinvoker